--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Session 3 - Assignment</title>
+    <title>Session 4 - Assignment</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    ></script>
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.js" type="module"></script>
+    <script src="App.js" type="module"></script>
   </body>
 </html>
