--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Session 4 - Assignment</title>
+    <title>Session 5/6 - Assignment</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
     </script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"><h1>Not yet rendered.</h1></div>
     <script src="App.js" type="module"></script>
   </body>
 </html>
